Правки первая модель оттока

--- a/Проект_спринта_11_Большунов_В.А._правка_1.ipynb
+++ b/Проект_спринта_11_Большунов_В.А._правка_1.ipynb
@@ -270,153 +270,153 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6805</th>\n",
-       "      <td>user_06146</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.422268</td>\n",
-       "      <td>0.506889</td>\n",
-       "      <td>236.708601</td>\n",
-       "      <td>116.214542</td>\n",
-       "      <td>265.278594</td>\n",
-       "      <td>75.607966</td>\n",
-       "      <td>0.246880</td>\n",
+       "      <th>943</th>\n",
+       "      <td>user_01160</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.795681</td>\n",
+       "      <td>0.073950</td>\n",
+       "      <td>385.714355</td>\n",
+       "      <td>234.133996</td>\n",
+       "      <td>221.526935</td>\n",
+       "      <td>18.504559</td>\n",
+       "      <td>0.209724</td>\n",
        "      <td>arabica</td>\n",
-       "      <td>dark</td>\n",
-       "      <td>whole</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>guatemala</td>\n",
-       "      <td>large</td>\n",
-       "      <td>pro</td>\n",
-       "      <td>12.732028</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.003576</td>\n",
-       "      <td>2.848412</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>autumn</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>android</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>geo_100</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2841</th>\n",
-       "      <td>user_06409</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.976496</td>\n",
-       "      <td>1.317349</td>\n",
-       "      <td>684.094434</td>\n",
-       "      <td>505.226584</td>\n",
-       "      <td>2937.152802</td>\n",
-       "      <td>847.137180</td>\n",
-       "      <td>0.096694</td>\n",
-       "      <td>arabica</td>\n",
-       "      <td>medium</td>\n",
+       "      <td>light</td>\n",
        "      <td>almond</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>brazil</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>kenya</td>\n",
-       "      <td>large</td>\n",
-       "      <td>basic</td>\n",
-       "      <td>5.190699</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>5.111127</td>\n",
-       "      <td>4.138907</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>4.431902</td>\n",
+       "      <td>4.726661</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>summer</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>ios</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>android</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>geo_16</td>\n",
+       "      <td>geo_91</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8961</th>\n",
-       "      <td>user_01980</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.037039</td>\n",
-       "      <td>0.634282</td>\n",
-       "      <td>503.567158</td>\n",
-       "      <td>302.522713</td>\n",
-       "      <td>516.195633</td>\n",
-       "      <td>214.949048</td>\n",
-       "      <td>0.447784</td>\n",
-       "      <td>blend</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>whole</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>guatemala</td>\n",
-       "      <td>large</td>\n",
-       "      <td>pro</td>\n",
-       "      <td>10.942915</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.553145</td>\n",
-       "      <td>5.221163</td>\n",
+       "      <th>7713</th>\n",
+       "      <td>user_06702</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>spring</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>web</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>geo_8</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9788</th>\n",
-       "      <td>user_01838</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>3.876859</td>\n",
-       "      <td>0.967283</td>\n",
-       "      <td>2511.190819</td>\n",
-       "      <td>1004.635453</td>\n",
-       "      <td>3783.596336</td>\n",
-       "      <td>1146.252381</td>\n",
-       "      <td>0.112005</td>\n",
-       "      <td>blend</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.376605</td>\n",
+       "      <td>374.093592</td>\n",
+       "      <td>215.331927</td>\n",
+       "      <td>1365.601689</td>\n",
+       "      <td>298.987520</td>\n",
+       "      <td>0.344503</td>\n",
+       "      <td>arabica</td>\n",
        "      <td>dark</td>\n",
-       "      <td>oat</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>skim</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>colombia</td>\n",
-       "      <td>medium</td>\n",
+       "      <td>large</td>\n",
        "      <td>basic</td>\n",
-       "      <td>10.847659</td>\n",
+       "      <td>12.692221</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>3.526933</td>\n",
-       "      <td>5.807891</td>\n",
+       "      <td>4.432503</td>\n",
+       "      <td>3.721693</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>spring</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>android</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>geo_32</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9102</th>\n",
+       "      <td>user_05429</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.906487</td>\n",
+       "      <td>0.475747</td>\n",
+       "      <td>588.407283</td>\n",
+       "      <td>284.194416</td>\n",
+       "      <td>436.670625</td>\n",
+       "      <td>100.772694</td>\n",
+       "      <td>0.619407</td>\n",
+       "      <td>robusta</td>\n",
+       "      <td>light</td>\n",
+       "      <td>none</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>vietnam</td>\n",
+       "      <td>large</td>\n",
+       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.284015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>summer</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>ios</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>android</td>\n",
        "      <td>0.0</td>\n",
        "      <td>geo_1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3059</th>\n",
-       "      <td>user_07676</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.907240</td>\n",
-       "      <td>0.692789</td>\n",
-       "      <td>848.129691</td>\n",
-       "      <td>454.748362</td>\n",
-       "      <td>1198.042874</td>\n",
-       "      <td>245.145942</td>\n",
-       "      <td>0.255951</td>\n",
-       "      <td>arabica</td>\n",
+       "      <th>3712</th>\n",
+       "      <td>user_03338</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.826705</td>\n",
+       "      <td>2.107013</td>\n",
+       "      <td>2391.199841</td>\n",
+       "      <td>757.390293</td>\n",
+       "      <td>7569.190469</td>\n",
+       "      <td>-1615.867176</td>\n",
+       "      <td>0.384524</td>\n",
+       "      <td>blend</td>\n",
        "      <td>dark</td>\n",
-       "      <td>whole</td>\n",
+       "      <td>oat</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>kenya</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>basic</td>\n",
-       "      <td>3.423900</td>\n",
+       "      <td>colombia</td>\n",
+       "      <td>large</td>\n",
+       "      <td>none</td>\n",
+       "      <td>11.308738</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.611948</td>\n",
-       "      <td>4.607395</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>autumn</td>\n",
-       "      <td>33.0</td>\n",
+       "      <td>3.004699</td>\n",
+       "      <td>3.990442</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>23.0</td>\n",
        "      <td>android</td>\n",
        "      <td>0.0</td>\n",
        "      <td>geo_2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6042</th>\n",
+       "      <td>user_06281</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.922382</td>\n",
+       "      <td>1.358741</td>\n",
+       "      <td>1042.550904</td>\n",
+       "      <td>304.586786</td>\n",
+       "      <td>1592.365212</td>\n",
+       "      <td>464.529521</td>\n",
+       "      <td>0.537691</td>\n",
+       "      <td>arabica</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>almond</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>guatemala</td>\n",
+       "      <td>large</td>\n",
+       "      <td>basic</td>\n",
+       "      <td>15.999927</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.323712</td>\n",
+       "      <td>5.287317</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>summer</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>android</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>geo_42</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -425,67 +425,67 @@
       ],
       "text/plain": [
        "         user_id  days_since_last_order  order_frequency_month  \\\n",
-       "6805  user_06146                    3.0               2.422268   \n",
-       "2841  user_06409                    NaN               5.976496   \n",
-       "8961  user_01980                    1.0               2.037039   \n",
-       "9788  user_01838                   13.0               3.876859   \n",
-       "3059  user_07676                    6.0               2.907240   \n",
+       "943   user_01160                    8.0               0.795681   \n",
+       "7713  user_06702                    NaN                    NaN   \n",
+       "9102  user_05429                    6.0               1.906487   \n",
+       "3712  user_03338                    4.0               8.826705   \n",
+       "6042  user_06281                    4.0               5.922382   \n",
        "\n",
        "      order_frequency_week  avg_order_value  median_order_value  \\\n",
-       "6805              0.506889       236.708601          116.214542   \n",
-       "2841              1.317349       684.094434          505.226584   \n",
-       "8961              0.634282       503.567158          302.522713   \n",
-       "9788              0.967283      2511.190819         1004.635453   \n",
-       "3059              0.692789       848.129691          454.748362   \n",
+       "943               0.073950       385.714355          234.133996   \n",
+       "7713              1.376605       374.093592          215.331927   \n",
+       "9102              0.475747       588.407283          284.194416   \n",
+       "3712              2.107013      2391.199841          757.390293   \n",
+       "6042              1.358741      1042.550904          304.586786   \n",
        "\n",
        "      total_spent_last_month  total_spent_last_week  discount_usage_rate  \\\n",
-       "6805              265.278594              75.607966             0.246880   \n",
-       "2841             2937.152802             847.137180             0.096694   \n",
-       "8961              516.195633             214.949048             0.447784   \n",
-       "9788             3783.596336            1146.252381             0.112005   \n",
-       "3059             1198.042874             245.145942             0.255951   \n",
+       "943               221.526935              18.504559             0.209724   \n",
+       "7713             1365.601689             298.987520             0.344503   \n",
+       "9102              436.670625             100.772694             0.619407   \n",
+       "3712             7569.190469           -1615.867176             0.384524   \n",
+       "6042             1592.365212             464.529521             0.537691   \n",
        "\n",
        "     last_coffee_type preferred_roast milk_preference  seasonal_menu_tried  \\\n",
-       "6805          arabica            dark           whole                  0.0   \n",
-       "2841          arabica          medium          almond                  NaN   \n",
-       "8961            blend          medium           whole                  1.0   \n",
-       "9788            blend            dark             oat                  0.0   \n",
-       "3059          arabica            dark           whole                  1.0   \n",
+       "943           arabica           light          almond                  1.0   \n",
+       "7713          arabica            dark            skim                  1.0   \n",
+       "9102          robusta           light            none                  1.0   \n",
+       "3712            blend            dark             oat                  1.0   \n",
+       "6042          arabica          medium          almond                  1.0   \n",
        "\n",
        "     coffee_bean_origin last_drink_size subscription_status  \\\n",
-       "6805          guatemala           large                 pro   \n",
-       "2841              kenya           large               basic   \n",
-       "8961          guatemala           large                 pro   \n",
-       "9788           colombia          medium               basic   \n",
-       "3059              kenya          medium               basic   \n",
+       "943              brazil             NaN                 NaN   \n",
+       "7713           colombia           large               basic   \n",
+       "9102            vietnam           large                none   \n",
+       "3712           colombia           large                none   \n",
+       "6042          guatemala           large               basic   \n",
        "\n",
        "      app_opens_per_week  notifications_enabled  review_rating_last_10  \\\n",
-       "6805           12.732028                    0.0               4.003576   \n",
-       "2841            5.190699                    1.0               5.111127   \n",
-       "8961           10.942915                    1.0               4.553145   \n",
-       "9788           10.847659                    1.0               3.526933   \n",
-       "3059            3.423900                    0.0               2.611948   \n",
+       "943                  NaN                    1.0               4.431902   \n",
+       "7713           12.692221                    1.0               4.432503   \n",
+       "9102                 NaN                    NaN               3.284015   \n",
+       "3712           11.308738                    0.0               3.004699   \n",
+       "6042           15.999927                    1.0               4.323712   \n",
        "\n",
        "      review_rating_last_1  app_crashes_last_month seasons  \\\n",
-       "6805              2.848412                     0.0  autumn   \n",
-       "2841              4.138907                     1.0  summer   \n",
-       "8961              5.221163                     NaN  spring   \n",
-       "9788              5.807891                     1.0  summer   \n",
-       "3059              4.607395                     1.0  autumn   \n",
+       "943               4.726661                     0.0  summer   \n",
+       "7713              3.721693                     1.0  spring   \n",
+       "9102                   NaN                     0.0  summer   \n",
+       "3712              3.990442                     0.0  winter   \n",
+       "6042              5.287317                     1.0  summer   \n",
        "\n",
        "      days_since_last_promo phone_type  coffee_preference_change geo_location  \\\n",
-       "6805                    3.0    android                       1.0      geo_100   \n",
-       "2841                   46.0        ios                       0.0       geo_16   \n",
-       "8961                   26.0        web                       0.0        geo_8   \n",
-       "9788                    1.0        ios                       0.0        geo_1   \n",
-       "3059                   33.0    android                       0.0        geo_2   \n",
+       "943                    27.0    android                       0.0       geo_91   \n",
+       "7713                   30.0    android                       NaN       geo_32   \n",
+       "9102                    8.0    android                       0.0        geo_1   \n",
+       "3712                   23.0    android                       0.0        geo_2   \n",
+       "6042                    4.0    android                       0.0       geo_42   \n",
        "\n",
        "      churn  \n",
-       "6805      0  \n",
-       "2841      0  \n",
-       "8961      0  \n",
-       "9788      0  \n",
-       "3059      0  "
+       "943       0  \n",
+       "7713      0  \n",
+       "9102      0  \n",
+       "3712      0  \n",
+       "6042      0  "
       ]
      },
      "execution_count": 3,
@@ -1095,7 +1095,7 @@
     "При первом рассмотрении видно, что данные соответствуют заявленным. Объем датасета составляет `10450` строк и `27` колонок, представляющих собой разнообразные признаки, включаю целевую переменную. Типы данных верны, датасет оформлен грамотно. Но, заметен определенный дисбаланс в распределении многих численных признаках, а также, практически во всех столбцах присутствуют пропуски, которые нам предстоит обработать. \n",
     "Также, заметны определенные аномалии в данных. Например, у некоторых числовых признаков присутствуют отрицательные значения. В ряде признаков такое возможно, например `avg_order_value`, где отрицательное значение может означать возврат. Но, в признаке `review_rating_last_1` это явно ошибка - рейтинг не может быть отрицательным. \n",
     "\n",
-    "Многие признаки имеют сильный разброс значени и возможные выбросы. Их мы более детально проанализируем ниже, визуализировав распределение значений и построив боксплоты.\n",
+    "Многие признаки имеют сильный разброс значений и возможные выбросы. Их мы более детально проанализируем ниже, визуализировав распределение значений и построив боксплоты.\n",
     "Приступим к исследовательскому анализу данных, чтобы более детально ознакомиться с данными."
    ]
   },
@@ -1282,7 +1282,7 @@
    "id": "d3dc6c2b",
    "metadata": {},
    "source": [
-    "Дубликатов в данных нет. Удалим не нужные нам столбцы `user_id`, `geo_location` и `seasons`. "
+    "Дубликатов в данных нет. Удалим не нужный нам столбец `user_id`. "
    ]
   },
   {
@@ -1322,7 +1322,9 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\">\n",
-    "Исправил. Оставили все признаки, кроме user_id для первых попыток обучения.\n",
+    "Исправил. Оставили все признаки, кроме user_id для первых попыток обучения. \n",
+    "\n",
+    "Единственное я не совсем понимаю по признаку seasons. Если данные собраны за последний месяц, то время года должно быть показано у всех клиентов одинаковое, это не собьет модель? Или же информация собрана за последний месяц относительно каждого клиента? Все равно получается что-то странное, не складывается по другим признакам. \n",
     "</div>"
    ]
   },
@@ -2001,6 +2003,7 @@
     "- `last_drink_size` — размер последнего напитка, купленного на момент сбора данных,\n",
     "- `subscription_status` — тип подписки пользователя,\n",
     "- `phone_type` — тип устройства, с которого пользователь чаще всего совершал покупки,\n",
+    "- `seasons` - время года,\n",
     "- `geo_location` — идентификатор региона пользователя.\n",
     "\n",
     "\n",
